# Document-analyzer-agent-with-Google-ADK

./: .env  README.md  agent.py  embeddings.py  main.py  pdf_retriever.py  pyproject.toml  requirements.txt  schemas.py  stock_api.py  vector_store.py
